--- a/Styles.css/cabeçalho.css
+++ b/Styles.css/cabeçalho.css
@@ -5,6 +5,7 @@
     text-decoration: none;
     margin: 0;
     padding: 0 0 2% 0.5%;
+    background-color: var(--rosa-claro);
 }
 
 
@@ -26,3 +27,26 @@
     font-weight: 500;
 }
 
+@media screen and (min-width: 767px) {
+    .cabeçalho {
+        gap: 10px;
+        height: 100px;
+
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .cabecalho {
+        flex-direction: row;
+        height: 20px;
+        justify-content: space-between;
+        margin: 0 auto;
+        padding: 20px 0;
+        width: 80%;
+    }
+
+    .cabeçalho__lista {
+        display: none;
+    }
+    
+}
